--- a/src/modulo-03-html-css/exercicios/Exe02/index.html
+++ b/src/modulo-03-html-css/exercicios/Exe02/index.html
@@ -3,22 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <title>Street Fighter - Inicio</title>
+        <link rel="stylesheet" href="main.css">
     </head>
 
-    <body style="background: url('fundo.jpg') no-repeat center 0;font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
-        <div class="menu" style="margin: 230px auto 0;display: table;padding: 10px;border: 1px solid #fff;border-radius: 10px;background: rgba(140, 140, 140, .6);">
-            <span style="margin: 25px;"><a href="index.html#conteudo" style="color: #fff;text-decoration: none;font-weight: bold;">Inicio</a></span>
-            <span style="margin: 25px;"><a href="https://www.google.com.br/search?q=Street+Fighter&tbm=nws" style="color: #fff;text-decoration: none;font-weight: bold;">Noticia</a></span>
-            <span style="margin: 25px;"><a href="ficha-tecnica.html#conteudo" style="color: #fff;text-decoration: none;font-weight: bold;">Ficha Tecnica</a></span>
-            <span style="margin: 25px;"><a href="sobre.html#conteudo" style="color: #fff;text-decoration: none;font-weight: bold;">Sobre</a></span>
+    <body>
+        <div class="menu">
+            <span class="item">
+                <a href="index.html#conteudo">Inicio</a>
+            </span>
+            <span class="item">
+                <a href="https://www.google.com.br/search?q=Street+Fighter&tbm=nws">Noticia</a>
+            </span>
+            <span class="item">
+                <a href="ficha-tecnica.html#conteudo">Ficha Técnica</a>
+            </span>
+            <span class="item">
+                <a href="sobre.html#conteudo">Sobre</a>
+            </span>
         </div>
 
-        <div id="conteudo" class="conteudo" style="margin: 70px auto;width: 800px;background: #eee;">
-            <div class="titulo" style="padding: 10px 15px;background: #5a5a5a;color: #eee;">
+        <div id="conteudo" class="conteudo">
+            <div class="titulo">
                 <h1>Street Fighter</h1>
             </div>
 
-            <div class="corpo" style="padding: 15px;">
+            <div class="corpo">
                 <h2>Sumário</h2>
 
                 <ul>
