fix(main.css, ficha-tecnica.html):  ajustado a imagem da descrição do sobre e ficha tecnica.

--- a/src/modulo-03-html-css/exercicios/Exe02/ficha-tecnica.html
+++ b/src/modulo-03-html-css/exercicios/Exe02/ficha-tecnica.html
@@ -30,7 +30,7 @@
             <div class="corpo medio">
                 <h2>Blanka</h2>
                 
-                <img src="blanka.png" alt="blanka">
+                <img src="blanka.png" class="imagem-descricao" alt="blanka">
                 
                 <p class="descricao">
                     <strong>Primeira aparição:</strong> Street Fighter II The World Warrior (1991)<br>
