refactor(ExeStreetFighter): melhorado o exercicio do street fighter.

--- a/src/modulo-03-html-css/exercicios/Exe02/ficha-tecnica.html
+++ b/src/modulo-03-html-css/exercicios/Exe02/ficha-tecnica.html
@@ -52,6 +52,7 @@
                     <strong>SF2 stage:</strong> Bacia do rio Amazonas (Brasil).<br>
                     <strong>Golpes especiais famosos:</strong> Electric Thunder, Rolling Attack.<br>
                 </p>
+                <div class="clear-fix"></div>
             </div>
         </div>
     </body>
