--- a/src/modulo-03-html-css/exercicios/ExeUltimate/cadastro-usuario.html
+++ b/src/modulo-03-html-css/exercicios/ExeUltimate/cadastro-usuario.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard Administrativo</title>
+    <title>Dashboard Administrativo - Cadastro Usuario</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="cadastro-usuario.css">
     <link rel="stylesheet" href="main.css">
 </head>
 
@@ -87,7 +88,7 @@
                 <li>
                     <h4 class="title">DASHBOARDS</h4>
                     <ul class="sub-menu">
-                        <li class="active">
+                        <li>
                             <a href="">
                                 <i class="glyphicon glyphicon-th-large"></i>Administrativo
                             </a>                    
@@ -102,7 +103,7 @@
                                 <i class="glyphicon glyphicon-th-list"></i>Contato
                             </a>                    
                         </li>
-                        <li>
+                        <li class="active">
                             <a href="">
                                 <i class="glyphicon glyphicon-user"></i>Usuario
                             </a>                    
@@ -122,10 +123,10 @@
                     <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Library</a>
+                    <a href="#">Cadastro</a>
                 </li>
                 <li class="active">
-                    Data
+                    Usuario
                 </li>
             </ol>
             <div class="clear-fix"></div>
