--- a/src/modulo-03-html-css/exercicios/ExeUltimate/cadastro-usuario.html
+++ b/src/modulo-03-html-css/exercicios/ExeUltimate/cadastro-usuario.html
@@ -64,7 +64,7 @@
             <img class="user-picture" src="" alt="Imagem do usuario">
             <div class="user-description">
                 <h4 class="name">Érico de Souza Loewe</h4>    
-                <a class="mail" href="">ed-lowe@hotmail.com</a>
+                <a class="mail" href="mailto:erico.loewe@cwi.com.br">erico.loewe@cwi.com.br</a>
             </div>          
             <div class="clear-fix"></div>  
             <ul class="icons">
@@ -89,7 +89,7 @@
                     <h4 class="title">DASHBOARDS</h4>
                     <ul class="sub-menu">
                         <li>
-                            <a href="">
+                            <a href="dashboard.html">
                                 <i class="glyphicon glyphicon-th-large"></i>Administrativo
                             </a>                    
                         </li>
@@ -104,7 +104,7 @@
                             </a>                    
                         </li>
                         <li class="active">
-                            <a href="">
+                            <a href="cadastro-usuario.html">
                                 <i class="glyphicon glyphicon-user"></i>Usuario
                             </a>                    
                         </li>
