--- a/src/modulo-03-html-css/exercicios/ExeUltimate/dashboard.html
+++ b/src/modulo-03-html-css/exercicios/ExeUltimate/dashboard.html
@@ -64,7 +64,7 @@
             <img class="user-picture" src="" alt="Imagem do usuario">
             <div class="user-description">
                 <h4 class="name">Érico de Souza Loewe</h4>    
-                <a class="mail" href="">ed-lowe@hotmail.com</a>
+                <a class="mail" href="mailto:erico.loewe@cwi.com.br">erico.loewe@cwi.com.br</a>
             </div>          
             <div class="clear-fix"></div>  
             <ul class="icons">
@@ -89,7 +89,7 @@
                     <h4 class="title">DASHBOARDS</h4>
                     <ul class="sub-menu">
                         <li class="active">
-                            <a href="">
+                            <a href="dashboard.html">
                                 <i class="glyphicon glyphicon-th-large"></i>Administrativo
                             </a>                    
                         </li>
@@ -104,7 +104,7 @@
                             </a>                    
                         </li>
                         <li>
-                            <a href="">
+                            <a href="cadastro-usuario.html">
                                 <i class="glyphicon glyphicon-user"></i>Usuario
                             </a>                    
                         </li>
@@ -206,6 +206,18 @@
                             </div>
                         </div>
                     </div>                    
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <div class="statistics-accesses">
+                        <h3 class="title">Acessos por dispositivo</h3>
+                        <img src="statistics-accesses.png" alt="Acessos por dispositivo" class="graph">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <div class="statistics-accesses">
+                        <h3 class="title">Acessos por dispositivo</h3>
+                        <img src="statistics-accesses.png" alt="Acessos por dispositivo" class="graph">
+                    </div>
                 </div>
             </div>
         </section>
