--- a/src/modulo-04-javascript/exercicios/ExeFinal/index.html
+++ b/src/modulo-04-javascript/exercicios/ExeFinal/index.html
@@ -38,8 +38,12 @@
                     <label for="dataNascimento">Data de Nascimento:</label>
                     <input type="text" class="form-control" name="dataNascimento" id="dataNascimento" maxlength="10">
                 </div>
+                <div class="form-group">         
+                    <label for="altura">Altura:</label>
+                    <input type="text" class="form-control" name="altura" id="altura">
+                </div>     
                 
-                <button type="submit">Cadastrar Cavaleiro</button>
+                <button class="btn btn-lg btn-primary" type="submit">Cadastrar Cavaleiro</button>
             </form>
         </div>
     </div>
