--- a/src/modulo-04-javascript/exercicios/ExeFinal/index.html
+++ b/src/modulo-04-javascript/exercicios/ExeFinal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dia 03 - Jquery</title>
+    <title>Lista de cavaleiros</title>
     
     <link rel="stylesheet" href="lib/Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="cavaleiros.css">
@@ -31,17 +31,55 @@
                     </select>
                 </div>
                 <div class="form-group">         
-                    <label for="url">Url da imagem:</label>
-                    <input type="text" class="form-control" name="url" id="url">
-                </div>        
-                <div class="form-group">         
                     <label for="dataNascimento">Data de Nascimento:</label>
                     <input type="text" class="form-control" name="dataNascimento" id="dataNascimento" maxlength="10">
                 </div>
                 <div class="form-group">         
                     <label for="altura">Altura:</label>
-                    <input type="text" class="form-control" name="altura" id="altura">
-                </div>     
+                    <input type="number" class="form-control" name="altura" id="altura" min="0">
+                </div>
+                <div class="form-group">         
+                    <label for="peso">Peso:</label>
+                    <input type="number" class="form-control" name="peso" id="peso" min="0">
+                </div>
+                <div class="form-group">         
+                    <label for="signo">Signo:</label>
+                    <select class="form-control" name="signo" id="signo">
+                        <option>Selecione</option>
+                        <option value="Áries">Áries</option>
+                        <option value="Touro">Touro</option>
+                        <option value="Gêmeos">Gêmeos</option>
+                        <option value="Câncer">Câncer</option>
+                        <option value="Leão">Leão</option>
+                        <option value="Virgem">Virgem</option>
+                        <option value="Libra">Libra</option>
+                        <option value="Escorpião">Escorpião</option>
+                        <option value="Sagitário">Sagitário</option>
+                        <option value="Capricórnio">Capricórnio</option>
+                        <option value="Aquário">Aquário</option>
+                        <option value="Peixes">Peixes</option>
+                    </select>
+                </div>
+                <div class="form-group">         
+                    <label for="localNascimento">Local de Nascimento:</label>
+                    <input type="text" class="form-control" name="localNascimento" id="localNascimento">
+                </div>
+                <div class="form-group">         
+                    <label for="localTreinamento">Local de Treinamento:</label>
+                    <input type="text" class="form-control" name="localTreinamento" id="localTreinamento">
+                </div>
+                <div class="form-group">         
+                    <label for="golpes">Golpes:</label>
+                    <a class="add-golpe"><i class="glyphicon glyphicon-plus"></i> Adicionar golpe</a>
+                    <div class="golpes row" id="golpes">
+                    </div>
+                </div>
+                <div class="form-group">         
+                    <label for="imagens">Imagens:</label>
+                    <a class="add-imagem"><i class="glyphicon glyphicon-plus"></i> Adicionar imagem</a>
+                    <div class="imagens row" id="imagens">
+                    </div>
+                </div>
                 
                 <button class="btn btn-lg btn-primary" type="submit">Cadastrar Cavaleiro</button>
             </form>
