feat(ExeFinal): add datepicker ao exercicio

--- a/src/modulo-04-javascript/exercicios/ExeFinal/index.html
+++ b/src/modulo-04-javascript/exercicios/ExeFinal/index.html
@@ -5,6 +5,7 @@
     <title>Lista de cavaleiros</title>
     
     <link rel="stylesheet" href="lib/Bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/Datepicker/css/datepicker.min.css">
     <link rel="stylesheet" href="cavaleiros.css">
 </head>
 <body>
@@ -88,6 +89,7 @@
     
     <script type="text/javascript" src="lib/Jquery/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="lib/Bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/Datepicker/js/bootstrap-datepicker.min.js"></script>
     <script type="text/javascript" src="cavaleiros.js"></script>
 </body>
 </html>
