--- a/src/modulo-06-ajax/exercicios/Exe01/consulta-ecletica.html
+++ b/src/modulo-06-ajax/exercicios/Exe01/consulta-ecletica.html
@@ -56,6 +56,7 @@
     <script src="Lib/Jquery/jquery-2.2.3.min.js" type="text/javascript"></script>
     <script src="Scripts/Models/Imagem.js" type="text/javascript"></script>
     <script src="Scripts/Models/Album.js" type="text/javascript"></script>
+    <script src="Scripts/Services/ServicoDeMensagem.js" type="text/javascript"></script>
     <script src="Scripts/Services/ServicoDeBuscaDoSpotify.js" type="text/javascript"></script>
     <script src="Scripts/Controllers/ConsultaDeArtistas.js" type="text/javascript"></script>
 </body>
