feat(Exe06): implementado basico do exercicio 07.

--- a/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-web/src/main/webapp/pages/home.xhtml
+++ b/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-web/src/main/webapp/pages/home.xhtml
@@ -4,9 +4,10 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <body>
-        <ui:composition template="./template.xhtml">
-            <ui:define name="content">
-                <div class="jumbotron">
+        
+        <ui:composition template="./../template/template.xhtml">
+            <ui:define name="page.content">
+                <div class="jumbotron default-background">
                     <h1><h:outputText value="Bem vindo"/></h1>
                     <p>
                         <h:outputText value="Exercicio 06 com template :D" />
@@ -14,6 +15,7 @@
                 </div>
             </ui:define>
         </ui:composition>
+        
     </body>        
 </html>
 
