--- a/src/modulo-09-tcc/integracoes/maps/index.html
+++ b/src/modulo-09-tcc/integracoes/maps/index.html
@@ -5,21 +5,50 @@
     <meta charset="UTF-8">
     <title>Integração com Api de mapas</title>
 
-    <style type="text/css">
-        #mapa {
-            width: 400px;
-            height: 400px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="default.css">
 </head>
 
 <body>
-    <div id="mapa"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div id="mapa"></div>
+            </div>
+            <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input id="buscar-origem" type="text" class="form-control">
+                    </div>
+                    <div class="col-sm-6">
+                        <button id="buscar-origem-btn" class="btn btn-default">Buscar origem</button>
+                    </div>
+                    <div class="col-sm-12">
+                        <div id="buscar-origem-list" class="list-group"></div>
+                    </div>
+                    <div class="col-sm-6">
+                        <input id="buscar-destino" type="text" class="form-control">
+                    </div>
+                    <div class="col-sm-6">
+                        <button id="buscar-destino-btn" class="btn btn-default">Buscar destino</button>
+                    </div>
+                    <div class="col-sm-12">
+                        <div id="buscar-destino-list" class="list-group"></div>
+                    </div>
 
-    <script src="https://code.jquery.com/jquery-3.0.0.min.js" type="text/javascript" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+                    <div class="col-sm-12">
+                        <button id="rotas" class="btn btn-default">Buscar rotas</button>
+                    </div>
+                </div>
+            </div>
+        </div>        
+    </div>
+
+    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUmQLjeSiw6_1u5SXVD8zZuy24IsjvGt4" type="text/javascript"></script>
     <script src="google/servicoDeMapa.js" type="text/javascript"></script>
-    <script src="google/servicoDeMapaView.js" type="text/javascript"></script>    
+    <script src="google/servicoDeMapaView.js" type="text/javascript"></script>
 </body>
 
 </html>
